--- a/VsCode/HTML/html/panaderia2.html
+++ b/VsCode/HTML/html/panaderia2.html
@@ -289,6 +289,26 @@
         </div>
 
         <div class="inter1"></div>
+    
+    <div class="footer">
+        <div class="tituloSecF">
+            <h1>Contáctanos</h1>
+        </div>
+        <div class="Fcontent">
+            <div class="redes">
+                
+                <h1>REDES SOCIALES</h1>
+                <h3>Horario:</h3>
+                <p>L-J 8:00-21:00 V-S 9:00-20:00 D cerrrado
+                    </p>
+            </div>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1471.6310209164742!2d1.9799129363908994!3d42.46471521338858!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2ses!4v1730803564831!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" 
+                loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> 
+            </div>
+
+        </div>
+    </div>
 
 </body>
 </html>
