--- a/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
+++ b/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
@@ -13,7 +13,7 @@
 		<h3>Contenido sin duplicados:</h3>
 		<p id="contSinDuplicar"></p>
 
-		<script src="equipos.js"></script>
+		<script src="equipos2.js"></script>
 		
 		
 		
