--- a/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
+++ b/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
@@ -10,10 +10,13 @@
 		<h3>Contenido del archivo:</h3>
 		<p id="contenido-archivo"></p>
 
-		<h3>Contenido sin duplicados:</h3>
-		<p id="contSinDuplicar"></p>
+		<h3>Equipos:</h3>
+		<p id="equipos"></p>
 
-		<script src="equipos2.js"></script>
+		<h3>Reservas:</h3>
+		<p id="reservas"></p>
+
+		<script src="equiposRandom.js"></script>
 		
 		
 		
