--- a/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
+++ b/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
@@ -16,7 +16,7 @@
 		<h3>Reservas:</h3>
 		<p id="reservas"></p>
 
-		<script src="equiposRandom.js"></script>
+		<script src="criadero.js"></script>
 		
 		
 		
