--- a/VsCode/HTML/html/panaderia2.html
+++ b/VsCode/HTML/html/panaderia2.html
@@ -82,7 +82,7 @@
                 <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
             </div>
             <div class="producto">
-                <img src="/img/baguette.jpg" alt="">
+                <img src="/img/hogaza.jpg">
                 <p>Hogaza Italiana</p>
                 <p>0,7€</p>
                 <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
@@ -90,7 +90,7 @@
                 <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
             </div>
             <div class="producto">
-                <img src="/img/baguette.jpg" alt="">
+                <img src="/img/Barra_de_gallega_00.webp">
                 <p>Barra Gallega</p>
                 <p>0,7€</p>
                 <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
@@ -106,7 +106,7 @@
                 <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
             </div>
             <div class="producto">
-                <img src="/img/baguette.jpg" alt="">
+                <img src="/img/integral.webp" alt="">
                 <p>Pan Integral</p>
                 <p>0,7€</p>
                 <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
@@ -138,8 +138,8 @@
                 <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
             </div>
             <div class="producto">
-                <img src="/img/panRustico.jpg" alt="">
-                <p>Pan Rústico</p>
+                <img src="/img/Pan-de-leche-y-miel-3-scaled.jpg">
+                <p>Pan de Leche</p>
                 <p>0,7€</p>
                 <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
                 <a href="#">Ingredientes</a>
@@ -157,64 +157,64 @@
         </div>
         <div class="productos2">
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/croissant.jpg">
+            <p>Croissant</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/napolitana.jpg">
+            <p>Napolitana</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/donuts-3.jpg">
+            <p>Donuts</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/Bollos-dulces-de-anís-39-2.webp">
+            <p>Bollos de anís</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/ROSQUILLAS2.jpg">
+            <p>Rosquillas</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/pastas-de-te-uko.webp">
+            <p>Pasta de té</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/berlinesas2.jpg">
+            <p>Berlinesas</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/PALMERITA-SIN-CHOCOLATE-scaled.webp">
+            <p>Palmier</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
@@ -231,32 +231,32 @@
         </div>
         <div class="productos3">
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/empanada-carne-sin-masa-1.jpg">
+            <p>Carne</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/RECETA-DE-EMPANADAS-DE-POLLO-AGOSTO-scaled.jpg">
+            <p>Pollo</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/empanadaAtun.jpg">
+            <p>Atún</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
             <img src="/img/shopping_bag_24dp_563F0C_FILL0_wght400_GRAD0_opsz24.svg" alt="">
         </div>
         <div class="producto">
-            <img src="/img/panRustico.jpg" alt="">
-            <p>Pan Rústico</p>
+            <img src="/img/jamonYqueso.jpg">
+            <p>Jamón y queso</p>
             <p>0,7€</p>
             <p>Fusce scelerisque augue id mattis euismod. Sed tempor pretium mauris at posuere.</p>
             <a href="#">Ingredientes</a>
