--- a/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
+++ b/VsCode/JAVASCRIPT/LeerFichero/leer_fichero.html
@@ -10,7 +10,7 @@
 		<h3>Contenido del archivo:</h3>
 		<p id="contenido-archivo"></p>
 
-		<h3>Equipos:</h3>
+		<h3>Padre:</h3>
 		<p id="equipos"></p>
 
 		<h3>Reservas:</h3>
