--- a/VsCode/JAVASCRIPT/OBJETOS/Biblioteca/plantilla.html
+++ b/VsCode/JAVASCRIPT/OBJETOS/Biblioteca/plantilla.html
@@ -6,7 +6,15 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <h3>Contenido del archivo Lector:</h3>
+  <input type="file" id="file-inputLector" />
+		
+		<p id="contenido-archivoLector"></p>
+
+    <h3>Contenido del archivo Libro:</h3>
+    <input type="file" id="file-inputLibro" />
+		
+		<p id="contenido-archivoLibro"></p>
 
 <script src="main.js"></script>
 
