--- a/VsCode/HTML/html/ejercicio6_1.html
+++ b/VsCode/HTML/html/ejercicio6_1.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Ejercicio Práctico FLEX</title>
 
-    <link rel="stylesheet" type="text/css" href="css/estilos.css" />
+    <link rel="stylesheet" type="text/css" href="/css/estilosGuiado (1).css" />
     <link
       href="https://fonts.googleapis.com/css?family=Lobster"
       rel="stylesheet"
@@ -28,29 +28,29 @@
           <div>Hipogrifos</div>
         </nav>
         <main>
-          <img src="img/quidditch1.jfif" />
+          <img src="/img/quidditch1.jfif" />
           <p>
            El Quidditch, como referente del deporte mágico
           </p>
         </main>
 
         <article>
-          <img src="img/hedwig2.jfif" />
+          <img src="/img/hedwig2.jfif" />
           <h2>Hedwig. La lechuza</h2>
         </article>
       </div>
       <div class="contenedor2">
         <article>
-          <img src="img/Hufflepuff3.jfif" />
+          <img src="/img/Hufflepuff3.jfif" />
           <h2>Hufflepuff. Puedes pertenecer a Hufflepuff
             donde son justos y leales. Esos perseverantes Hufflepuff de verdad no temen el trabajo pesado.</h2>
         </article>
         <article>
-          <img src="img/sombrero4.jfif" />
+          <img src="/img/sombrero4.jfif" />
           <h2>Slytherin no. Slytherin no</h2>
         </article>
         <article>
-          <img src="img/Hogwarts5.jfif" />
+          <img src="/img/Hogwarts5.jfif" />
           <h2>Bienvenidos a casa. Bienvenidos a Hogwarts. Escuela de magia y hechicería</h2>
         </article>
       </div>
@@ -63,8 +63,8 @@
           Todas los contenidos son propiedad del príncipe mestizo
         </div>
         <div class="social">
-          <img src="img/logoFB.jfif" /> <img src="img/logoIG.jfif" />
-          <img src="img/logoX.png" />
+          <img src="/img/logoFB.jfif" /> <img src="/img/logoIG.jfif" />
+          <img src="/img/logoX.png" />
         </div>
       </footer>
     </div>
