--- a/VsCode/JAVASCRIPT/OBJETOS/Biblioteca/bibliotecaPrueba+.html
+++ b/VsCode/JAVASCRIPT/OBJETOS/Biblioteca/bibliotecaPrueba+.html
@@ -8,13 +8,6 @@
 			border: 1px solid black;
 		}
 	</style>
-	<style>
-		button {
-			border: 1px solid black;
-			padding: 5px 5px;
-			margin: 15px 5px 20px 25px;
-		}
-	</style>
 </head>
 <body>
 	<h1>Biblioteca</h1>
@@ -46,10 +39,11 @@
 			<tbody>
 			</tbody>
 		</table>
-		<button id="vista-libros-boton">Actualizar libros</button>
+		<button id="vista-libros-boton">Actualizar vista</button>
 	</section>
-	<section id="vista-lectores">
-		<h2>Vista lectores</h2>
+	<section id="alta-lector">
+		<h2>Alta lector</h2>
+		
 		<table id="comprobar-lectores-tabla">
 			<thead>
 				<tr>
@@ -63,28 +57,29 @@
 			<tbody>
 			</tbody>
 		</table>
-		<button id="comprobar-lectores-boton">Actualizar lectores</button>
+		<button id="comprobar-lectores-boton">Actualizar</button>
+		
 	</section>
 	<section id="alta-libro">
-		<h2>Alta Libro</h2>
+		<h2>Alta Libros</h2>
 		<div>
-			<label>ISBN: </label>
+			<label>ISBN:</label>
 			<input type="text" placeholder="Introduce el ISBN..." id="alta-libro-isbn">
 		</div>
 		<div>
-			<label>Autor: </label>
+			<label>Autor:</label>
 			<input type="text" placeholder="Introduce el autor..." id="alta-libro-autor">
 		</div>
 		<div>
-			<label>Título: </label>
+			<label>Título:</label>
 			<input type="text" placeholder="Introduce el título..." id="alta-libro-titulo">
 		</div>
 		<div>
-			<label>Editorial: </label>
+			<label>Editorial:</label>
 			<input type="text" placeholder="Introduce la editorial..." id="alta-libro-editorial">
 		</div>
 		<div>
-			<label>Ejemplares: </label>
+			<label>Ejemplares:</label>
 			<input type="number" step="1" placeholder="Introduce el número de ejemplares..." id="alta-libro-ejemplares">
 		</div>
 		<button id="alta-libro-boton">Alta</button>
@@ -92,25 +87,46 @@
 	<section id="devolucion-prestamo">
 		<h2>Devolución/Préstamo de libros</h2>
 		<div>
-			<label>Nº de socio: </label>
+			<label>Nº de socio:</label>
 			<input type="text" placeholder="Introduce el nº de socio..." id="devolucion-prestamo-socio">
 		</div>
 		<div>
-			<label>Código de libro: </label>
+			<label>Código de libro:</label>
 			<input type="text" placeholder="Introduce el código de libro..." id="devolucion-prestamo-libro">
 		</div>
-			<button id="devolucion-boton">Devolución</button>
-			<button id="prestamo-boton">Préstamo</button>
+		<button id="devolucion-boton">Devolución</button>
+		<button id="prestamo-boton">Préstamo</button>
 	</section>
-	<script src="main.js">
+	<script>
+		
+		let elemento=document.getElementById("alta-lector");
+		let parrafo=document.createElement("p");
+		parrafo.innerHTML="Bienvenido";
+		elemento.appendChild(parrafo);
 
-		let actualizaLibros=document.getElementById("vista-libros-boton");
-		actualizaLibros.addEventListener("click", function() {
+		let titulo=elemento.querySelector("h2");
+		titulo.innerHTML="<i>Alta Lector<i>";
+		
+		parrafo.remove()
+		let devolucion=document.getElementById("devolucion-prestamo")
+		devolucion.appendChild(parrafo);
+
+		let botonDevolucion=document.getElementById("devolucion-boton");
+		botonDevolucion.style.backgroundColor="blue";
+
+		let botonPrestamo=document.getElementById("prestamo-boton");
+		botonPrestamo.style.backgroundColor="green";
+
+		let labels=devolucion.querySelectorAll("label");
+		for (const key of labels) {
+			key.style.color="red";
+		}
+		console.log(labels.length);
+		
+
 			
-		
-		
-		});
-		
+
+
 	</script>
 </body>
 </html>
